Add bundled scripts

--- a/action.yml
+++ b/action.yml
@@ -2,5 +2,5 @@ name: arm-runner
 description: "Starts an arm runner ec2 instance and stops it at the end of a workflow."
 runs:
   using: "node16"
-  main: "start-arm-runner.js"
-  post: "stop-arm-runner.js"
+  main: "dist/start-arm-runner.js"
+  post: "dist/stop-arm-runner.js"
